--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,22 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
+apply from: "$project.rootDir/versioning.gradle"
+apply from: "$project.rootDir/dependencies.gradle"
+
 android {
-    compileSdk 31
+    compileSdk sdkCompileVersion
 
     defaultConfig {
-        applicationId "com.akerimtay.rickandmorty"
-        minSdk 21
-        targetSdk 31
-        versionCode 1
-        versionName "1.0"
+        applicationId "com.akerimtay.jetmovies"
+        minSdk sdkMinVersion
+        targetSdk sdkTargetVersion
+        versionCode VERSION_CODE
+        versionName VERSION_NAME
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -21,8 +26,15 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            minifyEnabled false
+            shrinkResources false
+            versionNameSuffix "($VERSION_BUILD-debug)"
+            applicationIdSuffix '.debug'
         }
     }
     compileOptions {
@@ -37,7 +49,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion composeVersion
         kotlinCompilerVersion '1.5.10'
     }
     packagingOptions {
@@ -48,18 +60,21 @@ android {
 }
 
 dependencies {
+    implementation androidXDependencies.coreKtx
+    implementation androidXDependencies.appCompat
+    implementation androidXDependencies.lifecycleRuntimeKtx
+    implementation androidXDependencies.composeUi
+    implementation androidXDependencies.composeMaterial
+    implementation androidXDependencies.composeTooling
+    implementation androidXDependencies.composeToolingPreview
+    implementation androidXDependencies.composeActivity
 
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation googleDepencencies.materialDesign
+
+    implementation daggerHiltDependencies.hiltCore
+    implementation daggerHiltDependencies.hiltNavigation
+    kapt daggerHiltDependencies.hiltCompiler
+
+    implementation accompanistDependencies.insets
+    implementation accompanistDependencies.systemUiController
 }
