--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,14 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext {
-        compose_version = '1.0.0'
-    }
+    apply from: "$project.rootDir/dependencies.gradle"
+
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.0"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath gradlePluginDependencies.build
+        classpath gradlePluginDependencies.kotlin
+        classpath gradlePluginDependencies.daggerHilt
     }
 }
 
