--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -3,7 +3,7 @@ ext {
     sdkTargetVersion = 31
     sdkCompileVersion = 31
 
-    gradlePluginVersion = '7.0.0'
+    gradlePluginVersion = '7.0.1'
     kotlinVersion = '1.5.21'
     hiltCoreVersion = '2.38.1'
     gradlePluginDependencies = [
@@ -17,12 +17,12 @@ ext {
     androidXDependencies = [
             coreKtx              : "androidx.core:core-ktx:1.6.0",
             appCompat            : "androidx.appcompat:appcompat:1.3.1",
+            activityCompose      : 'androidx.activity:activity-compose:1.3.1',
             // Architecture Components
             lifecycleRuntimeKtx  : "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleKtxVersion",
             // Compose
             composeUi            : "androidx.compose.ui:ui:$composeVersion",
             composeMaterial      : "androidx.compose.material:material:$composeVersion",
-            composeActivity      : 'androidx.activity:activity-compose:1.3.1',
             composeTooling       : "androidx.compose.ui:ui-tooling:$composeVersion",
             composeToolingPreview: "androidx.compose.ui:ui-tooling-preview:$composeVersion"
     ]
