--- a/config/dependencies.toml
+++ b/config/dependencies.toml
@@ -5,6 +5,7 @@ androidx-lifecycle = "2.4.0"
 androidx-navigation = "2.4.1"
 androidx-annotation = "1.3.0"
 androidx-swiperefreshlayout = "1.1.0"
+androidx-recyclerview = "1.2.1"
 androidx-paging = "3.1.0"
 google-material = "1.5.0"
 google-gson = "2.8.8"
@@ -28,6 +29,7 @@ androidx-navigation-fragment = { module = "androidx.navigation:navigation-fragme
 androidx-navigation-ui = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "androidx-navigation" }
 androidx-annotation = { module = "androidx.annotation:annotation", version.ref = "androidx-annotation" }
 androidx-swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout", version.ref = "androidx-swiperefreshlayout" }
+androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "androidx-recyclerview" }
 androidx-paging = { module = "androidx.paging:paging-runtime", version.ref = "androidx-paging" }
 
 google-material = { module = "com.google.android.material:material", version.ref = "google-material" }
