--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,9 +2,9 @@
 android-gradle-plugin = "7.3.1"
 kotlin-gradle-plugin = "1.7.21"
 navigation-safe-args-gradle-plugin = "2.5.0"
-androidx-core = "1.9.0"
-androidx-appcompat = "1.5.1"
-androidx-lifecycle = "2.6.0-alpha03"
+androidx-core = "1.7.0"
+androidx-appcompat = "1.4.1"
+androidx-lifecycle = "2.4.0"
 androidx-navigation = "2.4.1"
 androidx-annotation = "1.3.0"
 androidx-swiperefreshlayout = "1.1.0"
@@ -15,7 +15,7 @@ google-material = "1.5.0"
 google-gson = "2.8.8"
 dagger = "2.35.1"
 dagger-compiler = "2.40.1"
-coroutine = "1.6.4"
+coroutine = "1.6.0"
 retrofit = "2.9.0"
 okhttp = "4.9.3"
 glide = "4.13.0"
